# base-parachain

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  network.toml  rust-toolchain.toml  tree.txt
.cargo/: config.toml
.github/workflows/: ci.yaml  linkchecker.yml  release.yaml
node/: Cargo.toml  README.md
node/src/: chain_spec.rs  cli.rs  command.rs  eth.rs  main.rs  rpc.rs  service.rs  utils.rs
node/src/rpc/: eth.rs  mod.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  benchmarks.rs  contracts_config.rs  genesis_config_presets.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/src/configs/: assets.rs  contracts.rs  mod.rs  revive.rs  xcm.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  rocksdb_weights.rs
tests/: zombienet.toml
