[package]
name = "parachain-template-runtime"
version = "0.1.0"
authors.workspace = true
description = "Parachain runtime template"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder.workspace = true
docify.workspace = true

[dependencies]
codec.workspace = true
log.workspace = true
scale-info.workspace = true
serde_json.workspace = true
smallvec.workspace = true
docify.workspace = true
cumulus-pallet-parachain-system = { workspace = true }

# Polkadot SDK umbrella (curated features for this runtime)
polkadot-sdk = { workspace = true, features = [
    # Core Substrate primitives and runtime
    "sp-api",
    "sp-block-builder",
    "sp-consensus-aura",
    "sp-core",
    "sp-genesis-builder",
    "sp-inherents",
    "sp-keyring",
    "sp-offchain",
    "sp-runtime",
    "sp-session",
    "sp-transaction-pool",
    "sp-version",

    # FRAME core
    "frame-executive",
    "frame-support",
    "frame-system",
    "frame-metadata-hash-extension",
    "frame-system-rpc-runtime-api",

    # Pallets used in this runtime
    "pallet-aura",
    "pallet-authorship",
    "pallet-balances",
    "pallet-collator-selection",
    "pallet-message-queue",
    "pallet-session",
    "pallet-sudo",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-xcm",
    "pallet-transaction-payment-rpc-runtime-api",

    # Cumulus runtime-side pallets and primitives
    "cumulus-pallet-aura-ext",
    "cumulus-pallet-weight-reclaim",
    "cumulus-pallet-xcm",
    "cumulus-pallet-xcmp-queue",
    "cumulus-primitives-aura",
    "cumulus-primitives-core",
    "cumulus-primitives-utility",

    # Parachains and Polkadot common runtime pieces
    "parachains-common",
    "polkadot-runtime-common",
    "polkadot-parachain-primitives",
    "staging-parachain-info",

    # XCM (staging) components used at runtime
    "staging-xcm",
    "staging-xcm-builder",
    "staging-xcm-executor",
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "serde_json/std",
    "polkadot-sdk/std",
    "cumulus-pallet-parachain-system/std",
]

runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "polkadot-sdk/frame-system-benchmarking",
    "polkadot-sdk/cumulus-pallet-session-benchmarking",
]

try-runtime = [
    "polkadot-sdk/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
